Create thread to write consumed frames in a video file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
   )
 endif()
 include(${CMAKE_BINARY_DIR}/conan.cmake)
-conan_cmake_run(REQUIRES opencv/4.3.0@conan/stable OPTIONS opencv:ffmpeg=True BASIC_SETUP BUILD missing)
+conan_cmake_run(REQUIRES opencv/4.3.0@conan/stable OPTIONS opencv:ffmpeg=True opencv:parallel=openmp BASIC_SETUP BUILD missing)
 
 if(WIN32)
   set(GUI_TYPE WIN32)
@@ -46,6 +46,8 @@ add_executable(
   FrameConsumerThread.h
   FrameProducerThread.cpp
   FrameProducerThread.h
+  FrameWriterThread.cpp
+  FrameWriterThread.h
   MainWindow.cpp
   MainWindow.h
   MainWindow.ui
@@ -58,6 +60,8 @@ add_executable(
   main.cpp
   utils.cpp
   utils.h
+  PainterUtils.h
+  PainterUtils.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Widgets ${CONAN_LIBS})
