--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,58 +1,30 @@
 cmake_minimum_required(VERSION 3.5)
 
 project(MotionDetection LANGUAGES CXX)
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(
-  Qt5 REQUIRED
-  COMPONENTS Widgets
-)
-
-find_package(OpenCV REQUIRED)
-
-if(WIN32)
-  set(GUI_TYPE WIN32)
-elseif(APPLE)
-  set(GUI_TYPE MACOSX_BUNDLE)
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+  message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+  file(
+    DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
+    "${CMAKE_BINARY_DIR}/conan.cmake"
+    TLS_VERIFY ON
+  )
 endif()
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+
+conan_cmake_run(
+  REQUIRES
+  poco/1.11.1
+  opencv/4.5.3
+  BASIC_SETUP
+  BUILD missing
+)
 
 add_executable(
-  ${PROJECT_NAME} ${GUI_TYPE}
-  ApplicationSettings.cpp
-  ApplicationSettings.h
-  BufferedVideoReader.cpp
-  BufferedVideoReader.h
-  FixedThreadSafeQueue.h
-  FrameConsumerThread.cpp
-  FrameConsumerThread.h
-  FrameProducerThread.cpp
-  FrameProducerThread.h
-  MainWindow.cpp
-  MainWindow.h
-  MainWindow.ui
-  PainterUtils.cpp
-  PainterUtils.h
-  PixmapScene.cpp
-  PixmapScene.h
-  PixmapTitleItem.cpp
-  PixmapTitleItem.h
-  SettingsDialog.cpp
-  SettingsDialog.h
-  SettingsDialog.ui
-  TimerWorker.h
+  ${PROJECT_NAME}
   main.cpp
-  utils.cpp
-  utils.h
 )
-
-target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} PUBLIC Qt5::Widgets ${OpenCV_LIBS})
+target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
