Isolate Poco::AbstractConfiguration calls

--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -12,5 +12,5 @@ fps = 30
 [background_subtractor]
 algorithm = MOG2
 history = 100
-varThreshold = 16.0
-detectShadows = false
+var_threshold = 16.0
+detect_shadows = false
