--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -5,8 +5,8 @@ host_and_port = 127.0.0.1:5000
 filename = /dev/video0
 api_preference = CAP_V4L2
 fourcc = MJPG
-frame_width = 640
-frame_height = 360
+frame_width = 1280
+frame_height = 720
 fps = 30
 
 [background_subtractor]
@@ -15,7 +15,10 @@ history = 100
 var_threshold = 16.0
 detect_shadows = false
 
-[smoothing_filter]
+[preprocess.resize]
+factor = 0.5
+
+[preprocess.smoothing]
 name = gaussian
 kernel_size = 21
 sigma = 0
