Move files to src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,55 +15,55 @@ set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} ${SANITIZER}")
 
 add_executable(
     ${PROJECT_NAME}
-    ApplicationSettings.cpp
-    ApplicationSettings.h
-    AppRequestHandlerFactory.cpp
-    AppRequestHandlerFactory.h
-    GaussianBlurFilter.cpp
-    GaussianBlurFilter.h
-    handlers/common/ContentLengthHandler.cpp
-    handlers/common/ContentLengthHandler.h
-    handlers/common/ImencodeHandler.cpp
-    handlers/common/ImencodeHandler.h
-    handlers/common/OkHandler.cpp
-    handlers/common/OkHandler.h
-    handlers/CurrentFrameHandler.cpp
-    handlers/CurrentFrameHandler.h
-    handlers/FpsHandler.cpp
-    handlers/FpsHandler.h
-    handlers/HealthyHandler.cpp
-    handlers/HealthyHandler.h
-    handlers/IndexHandler.cpp
-    handlers/IndexHandler.h
-    handlers/MotionMaskHandler.cpp
-    handlers/MotionMaskHandler.h
-    handlers/NotFoundHandler.cpp
-    handlers/NotFoundHandler.h
-    IdentityFilter.cpp
-    IdentityFilter.h
-    IImageFilter.h
-    ImageFilterChain.cpp
-    ImageFilterChain.h
-    IVideoCapture.h
-    main.cpp
-    MedianFilter.cpp
-    MedianFilter.h
-    MotionData.h
-    MotionDataWorker.cpp
-    MotionDataWorker.h
-    Mutex.h
-    NormalizedBoxFilter.cpp
-    NormalizedBoxFilter.h
-    OpencvBackgroundSubtractorFactory.cpp
-    OpencvBackgroundSubtractorFactory.h
-    OpencvVideoCapture.cpp
-    OpencvVideoCapture.h
-    PreprocessImageFactory.cpp
-    PreprocessImageFactory.h
-    ResizeFilter.cpp
-    ResizeFilter.h
-    VideoCaptureFactory.cpp
-    VideoCaptureFactory.h
+    src/ApplicationSettings.cpp
+    src/ApplicationSettings.h
+    src/AppRequestHandlerFactory.cpp
+    src/AppRequestHandlerFactory.h
+    src/GaussianBlurFilter.cpp
+    src/GaussianBlurFilter.h
+    src/handlers/common/ContentLengthHandler.cpp
+    src/handlers/common/ContentLengthHandler.h
+    src/handlers/common/ImencodeHandler.cpp
+    src/handlers/common/ImencodeHandler.h
+    src/handlers/common/OkHandler.cpp
+    src/handlers/common/OkHandler.h
+    src/handlers/CurrentFrameHandler.cpp
+    src/handlers/CurrentFrameHandler.h
+    src/handlers/FpsHandler.cpp
+    src/handlers/FpsHandler.h
+    src/handlers/HealthyHandler.cpp
+    src/handlers/HealthyHandler.h
+    src/handlers/IndexHandler.cpp
+    src/handlers/IndexHandler.h
+    src/handlers/MotionMaskHandler.cpp
+    src/handlers/MotionMaskHandler.h
+    src/handlers/NotFoundHandler.cpp
+    src/handlers/NotFoundHandler.h
+    src/IdentityFilter.cpp
+    src/IdentityFilter.h
+    src/IImageFilter.h
+    src/ImageFilterChain.cpp
+    src/ImageFilterChain.h
+    src/IVideoCapture.h
+    src/main.cpp
+    src/MedianFilter.cpp
+    src/MedianFilter.h
+    src/MotionData.h
+    src/MotionDataWorker.cpp
+    src/MotionDataWorker.h
+    src/Mutex.h
+    src/NormalizedBoxFilter.cpp
+    src/NormalizedBoxFilter.h
+    src/OpencvBackgroundSubtractorFactory.cpp
+    src/OpencvBackgroundSubtractorFactory.h
+    src/OpencvVideoCapture.cpp
+    src/OpencvVideoCapture.h
+    src/PreprocessImageFactory.cpp
+    src/PreprocessImageFactory.h
+    src/ResizeFilter.cpp
+    src/ResizeFilter.h
+    src/VideoCaptureFactory.cpp
+    src/VideoCaptureFactory.h
 )
 target_link_libraries(
     ${PROJECT_NAME} PUBLIC ${OpenCV_LIBRARIES} ${Poco_LIBRARIES} fmt::fmt
