--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -14,3 +14,8 @@ algorithm = MOG2
 history = 100
 var_threshold = 16.0
 detect_shadows = false
+
+[smoothing_filter]
+name = gaussian
+kernel_size = 21
+sigma = 0
