Drop cv:VideoWriter; use ffmpeg (libav) api

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,34 +5,54 @@ poco_dep = dependency('Poco',
 )
 opencv_dep = dependency('OpenCV', include_type: 'system')
 fmt_dep = dependency('fmt', include_type: 'system')
+boost_dep = dependency('boost', modules: ['chrono'], include_type: 'system')
+
+libav_deps = []
+foreach name : [
+    'libavcodec',
+    'libavdevice',
+    'libavformat',
+    'libavutil',
+    'libswresample',
+    'libswscale',
+  ]
+  dep = dependency(name, include_type: 'system')
+  libav_deps += dep
+endforeach
 
 executable(
   meson.project_name(),
   [
-    'AppRequestHandlerFactory.cpp',
-    'AppRequestHandlerFactory.hpp',
     'ApplicationSettings.cpp',
     'ApplicationSettings.hpp',
+    'AppRequestHandlerFactory.cpp',
+    'AppRequestHandlerFactory.hpp',
     'BackgroundSubtractorFactory.cpp',
     'BackgroundSubtractorFactory.hpp',
-    'IBackgroundSubtractor.hpp',
-    'IVideoCapture.hpp',
-    'MotionData.cpp',
-    'MotionData.hpp',
-    'MotionDataWorker.cpp',
-    'MotionDataWorker.hpp',
-    'Mutex.hpp',
-    'OpencvVideoCapture.cpp',
-    'OpencvVideoCapture.hpp',
-    'PreprocessImageFactory.cpp',
-    'PreprocessImageFactory.hpp',
-    'VideoCaptureFactory.cpp',
-    'VideoCaptureFactory.hpp',
+    'ffmpeg/detail/AvError.hpp',
+    'ffmpeg/detail/AvFrameAdapters.hpp',
+    'ffmpeg/detail/AvPacketAdapters.hpp',
+    'ffmpeg/detail/AVRationalOutput.hpp',
+    'ffmpeg/detail/BaseAvCodecContextProperties.hpp',
+    'ffmpeg/detail/OutputFile.cpp',
+    'ffmpeg/detail/OutputFile.hpp',
+    'ffmpeg/detail/ScopedAvAudioFifo.hpp',
+    'ffmpeg/detail/ScopedAvFormatInput.hpp',
+    'ffmpeg/detail/ScopedAvFormatOutput.hpp',
+    'ffmpeg/detail/ScopedAvSAmplesBuffer.hpp',
+    'ffmpeg/detail/ScopedDecoderContext.hpp',
+    'ffmpeg/detail/ScopedEncoderContext.hpp',
+    'ffmpeg/detail/SwrResampler.hpp',
+    'ffmpeg/detail/SwsPixelConverter.hpp',
+    'ffmpeg/InputDevice.cpp',
+    'ffmpeg/InputDevice.hpp',
+    'ffmpeg/ScopedAvDictionary.hpp',
+    'FileNameFactory.hpp',
     'filters/GaussianBlurFilter.cpp',
     'filters/GaussianBlurFilter.hpp',
-    'filters/IImageFilter.hpp',
     'filters/IdentityFilter.cpp',
     'filters/IdentityFilter.hpp',
+    'filters/IImageFilter.hpp',
     'filters/ImageFilterChain.cpp',
     'filters/ImageFilterChain.hpp',
     'filters/MedianFilter.cpp',
@@ -41,6 +61,12 @@ executable(
     'filters/NormalizedBoxFilter.hpp',
     'filters/ResizeFilter.cpp',
     'filters/ResizeFilter.hpp',
+    'handlers/common/ContentLengthHandler.cpp',
+    'handlers/common/ContentLengthHandler.hpp',
+    'handlers/common/ImencodeHandler.cpp',
+    'handlers/common/ImencodeHandler.hpp',
+    'handlers/common/OkHandler.cpp',
+    'handlers/common/OkHandler.hpp',
     'handlers/CurrentFrameHandler.cpp',
     'handlers/CurrentFrameHandler.hpp',
     'handlers/FpsHandler.cpp',
@@ -53,14 +79,16 @@ executable(
     'handlers/MotionMaskHandler.hpp',
     'handlers/NotFoundHandler.cpp',
     'handlers/NotFoundHandler.hpp',
-    'handlers/common/ContentLengthHandler.cpp',
-    'handlers/common/ContentLengthHandler.hpp',
-    'handlers/common/ImencodeHandler.cpp',
-    'handlers/common/ImencodeHandler.hpp',
-    'handlers/common/OkHandler.cpp',
-    'handlers/common/OkHandler.hpp',
+    'IBackgroundSubtractor.hpp',
     'main.cpp',
+    'MotionData.cpp',
+    'MotionData.hpp',
+    'MotionDataWorker.cpp',
+    'MotionDataWorker.hpp',
+    'PreprocessImageFactory.cpp',
+    'PreprocessImageFactory.hpp',
+    'SharedMutex.hpp',
   ],
-  dependencies: [poco_dep, opencv_dep, fmt_dep],
+  dependencies: [poco_dep, opencv_dep, fmt_dep, boost_dep, libav_deps],
   cpp_args: HARDEN_CXX_OPTIONS
 )
