Update demuxer options config; add input file format option

--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -1,32 +1,35 @@
+; vim: textwidth=85
 ; For the format of this file see
 ; https://docs.pocoproject.org/current/Poco.Util.IniFileConfiguration.html
 ; and https://docs.pocoproject.org/current/Poco.Util.AbstractConfiguration.html
 
-; http_server.host_and_port is required. Consists of a host address or IP
-; address and a port number. Specifies socket address to bind web server.
+; http_server.host_and_port is required. Consists of a host address or IP address and
+; a port number. Specifies socket address to bind web server.
 [http_server]
 host_and_port = 127.0.0.1:5000
 
 ; [video_capture] section contains input device parameters:
-; - filename is required. Can be name of video file or URL or any valid argument
-; for cv::VideoCapture constructor. Detailed format see in
-; https://docs.opencv.org/4.5.5/d8/dfe/classcv_1_1VideoCapture.html#ac4107fb146a762454a8a87715d9b7c96
-; - api_preference is optional. Default is CAP_ANY. If present it must be one
-; of a {CAP_ANY, CAP_FFMPEG, CAP_V4L2}. For description see
-; cv::VideoCaptureAPIs enum documentation:
-; https://docs.opencv.org/4.5.5/d4/d15/group__videoio__flags__base.html#ga023786be1ee68a9105bf2e48c700294d
-; - fourcc is optional if your video device can produce multiple formats. To get
-; list of available formats run `v4l2-ctl --list-formats-ext --device /dev/videoN`.
-; - size is optional pair of positive ints if your video device can produce
-; multiple formats. If present it must be of a form <WIDTH>'x'<HEIGHT>.
-; - framerate is optional positive double if your video device can produce
-; multiple formats.
+; - filename - required input file url. Accepts the same syntax as
+; https://ffmpeg.org/ffmpeg.html#Video-and-Audio-file-format-conversion
+; - file_format - optional input file format. Has the same meaning as '-f' option in
+; ffmpeg program https://ffmpeg.org/ffmpeg.html#Main-options
+; For the list of supported devices and protocols see
+; https://ffmpeg.org/ffplay-all.html
+; - video_size - optional private option for some demuxers. See description for '-s'
+; option for ffmpeg program https://ffmpeg.org/ffmpeg.html#Video-Options
+; - framerate - optional private option for some demuxers. For the syntax see
+; https://ffmpeg.org/ffmpeg.html#Video-Options
+; - input_format - optional private option for some demuxers. Sets preferred pixel
+; format. For example see https://ffmpeg.org/ffmpeg-all.html#video4linux2_002c-v4l2
+;
+; For the list of supported formats run 'ffmpeg -hide_banner -f v4l2 -list_formats
+; all -i /dev/videoN'
 [video_capture]
 filename = /dev/video0
-api_preference = CAP_V4L2
-fourcc = MJPG
-size = 1280x720
+file_format = v4l2
+video_size = 1280x720
 framerate = 30
+input_format = mjpeg
 
 ; [background_subtractor] section specifies background segmentation algorithm
 ; and its parameters:
