Add output files config

--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -31,6 +31,20 @@ video_size = 1280x720
 framerate = 30
 input_format = mjpeg
 
+; Output video files settings:
+; - prefix - required path to a folder where to put recorded video files with motion.
+; Can be empty. In this case current working dir will be used. Date subfolder will be
+; created inside the prefix folder with the ISO 8601 format "%Y-%m-%d". Output files
+; will be created inside the date subfolder with a name in local format "%H.%M.%S" +
+; extension. For the time format details see doc for time_fmt manipulator
+; https://www.boost.org/doc/libs/1_81_0/doc/html/chrono/reference.html#chrono.reference.io.ios_state_hpp.sag.set_time_fmt
+; - extension - required format of generated files. Video files are always recorded
+; with H264 video codec (max_b_frames = 2, gop_size = input_fps / 2, preset = fast,
+; tune = zerolatency, closed gop) and AAC audio codec.
+[output_files]
+prefix = videos
+extension = .mp4
+
 ; [background_subtractor] section specifies background segmentation algorithm
 ; and its parameters:
 ; - algorithm is required. Must be one of a {KNN, MOG2}.
