Add bitrate option to config

--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -6,7 +6,7 @@
 ; http_server.host_and_port is required. Consists of a host address or IP address and
 ; a port number. Specifies socket address to bind web server.
 [http_server]
-host_and_port = 127.0.0.1:5000
+host_and_port = 127.0.0.1:5001
 
 ; [video_capture] section contains input device parameters:
 ; - filename - required input file url. Accepts the same syntax as
@@ -40,10 +40,17 @@ input_format = mjpeg
 ; https://www.boost.org/doc/libs/1_81_0/doc/html/chrono/reference.html#chrono.reference.io.ios_state_hpp.sag.set_time_fmt
 ; - extension - required format of generated files. Video files are always recorded
 ; with H264 video codec (max_b_frames = 2, gop_size = input_fps / 2, preset = fast,
-; tune = zerolatency, closed gop) and AAC audio codec.
+; tune = zerolatency, closed gop) and AAC audio codec;
+; - video_bitrate - optional bitrate of a recorded video stream. Can accept either
+; numerical value or string representation as '-b:v' option in ffmpeg. See
+; https://ffmpeg.org/ffmpeg.html#Options
+; - audio_bitrate - optional bitrate of an output audio streams. Has the same meaning
+; as '-b:a' option in ffmpeg.
 [output_files]
 prefix = videos
 extension = .mp4
+video_bitrate = 10m
+audio_bitrate = 128k
 
 ; [background_subtractor] section specifies background segmentation algorithm
 ; and its parameters:
