--- a/src/meson.build
+++ b/src/meson.build
@@ -29,7 +29,9 @@ executable(
     'AppRequestHandlerFactory.hpp',
     'BackgroundSubtractorFactory.cpp',
     'BackgroundSubtractorFactory.hpp',
+    'CvMatRaiiAdapter.hpp',
     'DemuxerOptionsFactory.hpp',
+    'ErrorWithContext.hpp',
     'ffmpeg/detail/AvError.hpp',
     'ffmpeg/detail/AvFrameAdapters.hpp',
     'ffmpeg/detail/AvPacketAdapters.hpp',
@@ -48,6 +50,7 @@ executable(
     'ffmpeg/InputDevice.cpp',
     'ffmpeg/InputDevice.hpp',
     'ffmpeg/ScopedAvDictionary.hpp',
+    'FfmpegInputDeviceFactory.hpp',
     'FileNameFactory.hpp',
     'filters/GaussianBlurFilter.cpp',
     'filters/GaussianBlurFilter.hpp',
