Drop Poco logger, use Boost.Log

--- a/MotionDetection.ini
+++ b/MotionDetection.ini
@@ -52,6 +52,12 @@ extension = .mp4
 video_bitrate = 10m
 audio_bitrate = 128k
 
+; Logging settings:
+; log_level - optional. Can be one of {trace, debug, info, warning, error, fatal}.
+; Default is info.
+[logging]
+log_level = debug
+
 ; [background_subtractor] section specifies background segmentation algorithm
 ; and its parameters:
 ; - algorithm is required. Must be one of a {KNN, MOG2}.
